--- a/src/components/Route/index.css
+++ b/src/components/Route/index.css
@@ -1,19 +1,33 @@
 .route {
     display: flex;
     justify-content: space-between;
-    border: 1px solid gray;
-    margin-bottom: 20px;      
-    padding: 10px;
+    background-color: white;
+    border-radius: var(--radius-main);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    margin-bottom: 15px;      
+    padding: 15px;
     font-size: 1.2rem;
+
+}
+
+.dragged {
+    font-weight: 700;
 }
 
 .route_delete {
+    display: none;
     font-size: 20px;
     color: gray;
     cursor: pointer;
 }
 
+
+
 .route_delete:hover {    
     color: red;
     font-weight: 700;
+}
+
+.route:hover .route_delete {
+    display: block;
 }
