--- a/src/components/Route/index.css
+++ b/src/components/Route/index.css
@@ -3,15 +3,16 @@
     justify-content: space-between;
     background-color: white;
     border-radius: var(--radius-main);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border: 2px solid #f2f4f9;
     margin-bottom: 15px;      
     padding: 15px;
     font-size: 1.2rem;
-
 }
 
 .dragged {
     font-weight: 700;
+    color: var(--color-blue);
+    border: 2px solid var(--color-blue);
 }
 
 .route_delete {
@@ -20,8 +21,6 @@
     color: gray;
     cursor: pointer;
 }
-
-
 
 .route_delete:hover {    
     color: red;
